# Genie-and-Lamp-GPU

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  build-cmake.sh  runner.rb
data/: README
data/Dodgers/: readme
data/calit2/: CalIt2_7.csv  CalIt2_9.csv  readme
data/test/: seqTest_8k.csv  sequenceTest.csv  testing.data  testing_parapola.csv  testing_simple.csv
src/: CONSTANT.cpp  CONSTANT.h  Main.cu
src/AppManager/: BladeLoader.h  WrapperIndexBuilder.cpp  WrapperIndexBuilder.h
src/AppManager/IndexBuilder/: DataProcess.cpp  DataProcess.h  invListBuilder.cpp  invListBuilder.h
src/Genie/: WrapperGPUKNN.cpp  WrapperScan.cpp  WrapperScan.h
src/Genie/GPUKNN/: GPUManager.cu  GPUManager.h  UtlGPU.cu  UtlGPU.h  generalization.cu  generalization.h
src/Genie/Scan/: CPUScan.cu  CPUScan.h  DistFunc.h  DistFunc.inc  GPUScan.cu  GPUScan.h  UtlScan.h
src/Genie/Scan/TemplateFunctions/: GPUScanFunctions.h  GPUScanFunctions.inc
src/Genie/lib/HDMap/: HDMap.h  HDMap.inl  HDMapConfig.cu  HDMapConfig.h  HDMapException.h
src/Genie/lib/HDMap/D_Value/: D_Value.h  HDValueAdaptor.h  HDValueVectorValue.h  HDValueVectorValue.inl
src/Genie/lib/HDMap/H_Map/: HDMapAdaptor.h  HDMapMapMap.h  HDMapMapMap.inl  HDMapVectorMap.h  HDMapVectorMap.inl  H_Map.h
src/Genie/lib/bucket_topk/: assign_bucket.inc  bucket_topk.inc  count_sum.inc  result_thread_partition.inc  save_result.inc
src/lib/bucket_topk/: assign_bucket.inc  bucket_topk.h  bucket_topk.inc  result_thread_partition.inc
